# mom_weekly_rankings_email

./: .gitignore  pyproject.toml
mom_weekly_rankings_email/: app.py  send_message.py
mom_weekly_rankings_email/assets/: salutations.yaml
